--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,20 @@
 <body>
 
     <!-- Navbar goes here -->
-
+    <nav>
+        <div class="nav-wrapper">
+          <form>
+            <div class="input-field">
+              <input id="search" type="search" required>
+              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+              <button id="foodSearchButton">Submit</button>
+              <i class="material-icons">close</i>
+            </div>
+          </form>
+        </div>
+      </nav>
+<h1>Site Title</h1>
+<p>who we are and what you can use this site for</p>
     <!-- Page Layout here -->
     <div class="row">
 
