event listener working, changes should be same as katy

--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en">
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,38 +12,34 @@
 </head>
 
 <body>
-
-
     <!-- Navbar goes here -->
     <nav>
         <div class="nav-wrapper">
-          <form>
-            <div class="input-field">
-              <input id="search" type="search" required>
-              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-              <button id="foodSearchButton">Submit</button>
-              <i class="material-icons">close</i>
-            </div>
-          </form>
-        </div>
-      </nav>
-<h1>Site Title</h1>
-<p>who we are and what you can use this site for</p>
+            <form>
+                <div class="input-field">
+                    <input id="search" type="search" required />
+                    <label class="label-icon" for="search"><i class="material-icons">search</i></label
+            >
+            <button id="foodSearchButton">Submit</button>
+            <i class="material-icons">close</i>
+          </div>
+        </form>
+      </div>
+    </nav>
+    <h1>Site Title</h1>
+    <p>who we are and what you can use this site for</p>
     <!-- Page Layout here -->
     <div class="row">
-
-        <div class="col s3">
-          <!-- Grey navigation panel -->
-        </div>
-  
-        <div class="col s9">
-          <!-- Teal page content  -->
-        </div>
-  
+      <div class="col s3">
+        <!-- Grey navigation panel -->
       </div>
-     <!-- Compiled and minified JavaScript -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./script.js"></script>
-</body>
 
+      <div class="col s9">
+        <!-- Teal page content  -->
+      </div>
+    </div>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="./script.js"></script>
+  </body>
 </html>
