--- a/Index.html
+++ b/Index.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en">
-
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-<head>
+  <!-- Compiled and minified CSS -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+  />
+  <link rel="stylesheet" href="./style.css" />
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-
-
+  <body>
     <!-- Navbar goes here -->
     <nav>
-        <div class="nav-wrapper">
-          <form>
-            <div class="input-field">
-              <input id="search" type="search" required>
-              <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-              <button id="foodSearchButton">Submit</button>
-              <i class="material-icons">close</i>
-            </div>
-          </form>
-        </div>
-      </nav>
-<h1>Site Title</h1>
-<p>who we are and what you can use this site for</p>
+      <div class="nav-wrapper">
+        <ul class="tabs tabs">
+          <li class="tab"><a href="#test1">My Foods</a></li>
+          <li class="tab"><a class="active" href="#test2">My Recipes</a></li>
+          <li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
+          <li class="tab"><a href="#test4">Test 4</a></li>
+        </ul>
+        <form class="input-field" placeholder="Search your food here...">
+          <textarea id="search" type="search" required /></textarea>
+          <button id="foodSearchButton">Submit</button>
+          <i class="material-icons">search</i>
+          <label class="label-icon" for="search">
+         </form>
+      </div>
+    </nav>
+
+    <div>
+      <p>who we are and what you can use this site for</p>
+    </div>
     <!-- Page Layout here -->
     <div class="row">
-
-        <div class="col s3">
-          <!-- Grey navigation panel -->
-        </div>
-  
-        <div class="col s9">
-          <!-- Teal page content  -->
-        </div>
-  
+      <div class="col s3">
+        <!-- Grey navigation panel -->
       </div>
-     <!-- Compiled and minified JavaScript -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./script.js"></script>
-</body>
 
+      <div class="col s9">
+        <div class="container">
+          <h1 class="brand">Recipes</h1>
+        </div>
+        <div class="search-result"></div>
+        
+        <!-- Teal page content  -->
+        <!-- The containerRecips is the div for the recipe cards.
+        They cards are in the JS file lines 41-66 -->
+<div class="containerRecipes"></div>
+
+      </div>
+    </div>
+
+   
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="./script.js"></script>
+  </body>
 </html>
