--- a/Index.html
+++ b/Index.html
@@ -18,28 +18,32 @@
             <form>
                 <div class="input-field">
                     <input id="search" type="search" required />
-                    <label class="label-icon" for="search"><i class="material-icons">search</i></label
-            >
-            <button id="foodSearchButton">Submit</button>
-            <i class="material-icons">close</i>
-          </div>
-        </form>
-      </div>
+                    <label class="label-icon" for="search"><i class="material-icons"></i
+            ></label>
+                    <button id="foodSearchButton">Submit</button>
+                    <i class="material-icons">close</i>
+                </div>
+            </form>
+        </div>
     </nav>
     <h1>Site Title</h1>
     <p>who we are and what you can use this site for</p>
     <!-- Page Layout here -->
     <div class="row">
-      <div class="col s3">
-        <!-- Grey navigation panel -->
-      </div>
+        <div class="col s3">
+            <!-- Grey navigation panel -->
+        </div>
 
-      <div class="col s9">
-        <!-- Teal page content  -->
-      </div>
+        <div class="col s9">
+            <!-- Teal page content  -->
+        </div>
     </div>
+    <div class="test"></div>
+    <div class="recipe-container"></div>
+
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./script.js"></script>
-  </body>
+</body>
+
 </html>
