changed spelling of a letter

--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
   <!-- Compiled and minified CSS -->
   <link
     rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-  />
+    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
   <link rel="stylesheet" href="./style.css" />
   <head>
     <meta charset="UTF-8" />
@@ -28,7 +26,7 @@
           <textarea id="search" type="search" required /></textarea>
           <button id="foodSearchButton">Submit</button>
           <i class="material-icons">search</i>
-          <label class="label-icon" for="search">
+          <label class="label-icon" for="search"></label>
          </form>
       </div>
     </nav>
