recipe saving in local storage

--- a/Index.html
+++ b/Index.html
@@ -28,12 +28,13 @@
           <i class="material-icons">search</i>
           <label class="label-icon" for="search"></label>
          </form>
+        </div>
+      </nav>
+      
+      <div>
+        <p>who we are and what you can use this site for</p>
       </div>
-    </nav>
-
-    <div>
-      <p>who we are and what you can use this site for</p>
-    </div>
+      <div class="test"></div>
     <!-- Page Layout here -->
     <div class="row">
       <div class="col s3">
