MY RECIPES TAB/DATA ADDED, NEEDS STYLE

--- a/Index.html
+++ b/Index.html
@@ -25,11 +25,11 @@
                     <tr>
                         <th>Date</th>
                         <th>Name</th>
-                        <th> proetein</th>
-                        <th>fat</th>
-                        <th>sugar</th>
-                        <th>carbs</th>
-                        <th>calories</th>
+                        <th>Protein</th>
+                        <th>Fat</th>
+                        <th>Sugar</th>
+                        <th>Carbs</th>
+                        <th>Calories</th>
                     </tr>
                 </thead>
                 <tbody id="recentSearches">
@@ -94,12 +94,14 @@
         <div id="myRecipes" class="tabcontent #00E5FF cyan accent-3">
             <h1>My recipes</h1>
             <p>Saved recipes from my search</p>
+            <div class="recipeCard" id="recipe-container"></div>
         </div>
     </div>
     <!-- Compiled and minified JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./script.js"></script>
+    <script src="./myRecipes.js"></script>
 </body>
 
 </html>
