--- a/myRecipes.html
+++ b/myRecipes.html
@@ -12,7 +12,8 @@
 
 <body>
     <h1>MY RECIPES</h1>
-    <script src="myRecipes.js"></script>
+    <div class="recipeCard" id="recipe-container"></div>
+    <script src="./myRecipes.js"></script>
 </body>
 
 </html>
