deleting comments in code. formatting recipe tab

--- a/index.html
+++ b/index.html
@@ -1,28 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Landing Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+    <title>Food Dictionary</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
     <link rel="stylesheet" href="./style2.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header id="showcase">
-        <nav class="black">
-            <ul>
-                <a class="waves-effect waves-light btn">About Us</a>
-                <a href="./search.html" class="waves-effect waves-light btn">
-            Begin your search...</a
-          >
+      <nav class="black">
+        <ul>
+          <a class="flat btn" href="#about">About Us</a>
+          <a href="./search.html" class="waves-effect waves-light btn">
+            Begin your search...</a>
         </ul>
-      </nav>
-      <h1>Welcome to Your Foods</h1>
+
+      <h1>Food Dictionary</h1>
+      <h4>A quick search for what you eat...or don't.</h4>
+    </nav>
     </header>
 
+<section class="container">
+  <h3 id="about">About</h3>
+  <h5>Why you need the Food Dictionary</h5>
+  <p>
+    Many food and diet applications allow you to search a food or branded food item easily. However, once you have 
+    the nutrition info you need, it seems to become burried in the app. With Food Dictionary, the nutrition is 
+    always easy to find on your screen. Every search you make will be logged by date to the My Foods section. 
+    This allows you to see what foods you have searched with all their nutrition info. Quick and easy.
+    <br>
+    <br>
+    Along with every food search made, a few recipe ideas will be given as well. Discover some new ways to prepare
+    some of your favorite foods. Save the recipes you would like to see again to the My Recipes tab.
+    <br>
+    <br>
+    <h6>Our Team:
+      <ul>
+      <li>Katy Brown</li>
+      <li>Joshua Clancy</li>
+      <li>Zane Marshall</li>
+      </ul>
+    </h6>
+  </p>
+</section>
     <script src="./script.js"></script>
   </body>
 </html>
