--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Dictionary</title>
+    <link rel="icon" href="./foodLogo.png" type="image/icon type">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style2.css" />
   </head>
 
@@ -21,7 +25,7 @@
             Begin your search...</a>
         </ul>
 
-      <h1>Food Dictionary</h1>
+      <h1><span class="food">food</span> DICTIONARY</h1>
       <h4>A quick search for what you eat...or don't.</h4>
     </nav>
     </header>
