--- a/search.html
+++ b/search.html
@@ -14,7 +14,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Food Dictionary</title>
+    <link rel="icon" href="./foodLogo.png" type="image/icon type" />
   </head>
 
   <body class="white">
@@ -120,20 +121,16 @@
       </div>
 
       <div id="myRecipes" class="tabcontent">
-        <div class="container">
-          <div class="col s12 m4">
-            <div class="card">
-              <div class="card-image">
-                <h1>My recipes</h1>
-                <p>Saved recipes from my search</p>
-                <div id="recipe-container"></div>
-              </div>
-            </div>
+        <h1>My recipes</h1>
+        <p>Saved recipes from my search</p>
+        <div id="recipe-container"></div>
+        <div class="row">
+          <div class="card">
+            <div class="col s12 m4"></div>
           </div>
         </div>
       </div>
     </div>
-    <
     <!-- Compiled and minified JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
