trying to fix about button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header id="showcase">
       <nav class="black">
         <ul>
-          <a class="flat btn" href="#about">About Us</a>
+          <a href="#about" class="waves-effect waves-light btn" >About Us</a>
           <a href="./search.html" class="waves-effect waves-light btn">
             Begin your search...</a>
         </ul>
